<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_type_entire_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/lora_bold"
        android:gravity="center"
        android:text="@string/entirehouse"
        android:textColor="@color/colorText3"
        android:textSize="@dimen/_16sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@color/gray50_300" />

    <TextView
        android:id="@+id/dialog_type_condominium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/lora_bold"
        android:gravity="center"
        android:text="@string/condominium"
        android:textColor="@color/colorText3"
        android:textSize="@dimen/_16sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@color/gray50_300" />

    <TextView
        android:id="@+id/dialog_type_service_apartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/lora_bold"
        android:gravity="center"
        android:text="@string/service_apartment"
        android:textColor="@color/colorText3"
        android:textSize="@dimen/_16sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@color/gray50_300" />

    <TextView
        android:id="@+id/dialog_type_studio_apartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/lora_bold"
        android:gravity="center"
        android:text="@string/studio_apartment"
        android:textColor="@color/colorText3"
        android:textSize="@dimen/_16sdp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@color/gray50_300" />

    <TextView
        android:id="@+id/dialog_type_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/lora_bold"
        android:gravity="center"
        android:text="@string/other"
        android:textColor="@color/colorText3"
        android:textSize="@dimen/_16sdp" />
    
</LinearLayout>
