<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/layout_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/lora_bold"
        android:text="@string/login"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_login_social"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_login_title"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_login_google"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/_16sdp"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lora_bold"
                    android:gravity="center"
                    android:text="@string/login_google"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_login_facebook"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/com_facebook_blue"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/_16sdp"
                    android:src="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lora_bold"
                    android:gravity="center"
                    android:text="@string/login_facebook"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
        <!--                android:id="@+id/layout_login_facebook"-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1"-->
        <!--                android:layout_marginStart="@dimen/_4sdp"-->
        <!--                android:layout_marginEnd="@dimen/_8sdp"-->
        <!--                android:text="@string/login_facebook"-->
        <!--                android:textAlignment="center"-->
        <!--                android:textAllCaps="false"-->
        <!--                app:elevation="0dp"-->
        <!--                android:textSize="@dimen/_16sdp"-->
        <!--                android:textColor="@color/white"-->
        <!--                app:icon="@drawable/com_facebook_button_icon"-->
        <!--                app:iconTint="@color/white"-->
        <!--                android:backgroundTint="@color/com_facebook_blue"/>-->
    </LinearLayout>


    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora"
        android:text="@string/or_login_with_email"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_login_social"
        android:textSize="@dimen/_10sdp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_login_email_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/view">

        <EditText
            android:id="@+id/layout_login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lora_bold"
            android:hint="@string/email"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:textSize="@dimen/_12sdp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_login_password_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_login_email_container">

        <EditText
            android:id="@+id/layout_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lora_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:textSize="@dimen/_12sdp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/layout_login_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_30sdp"
        android:fontFamily="@font/lora"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@id/layout_login_password_container"
        android:textSize="@dimen/_12sdp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/layout_login_native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:text="@string/login"
        android:textAlignment="center"
        android:fontFamily="@font/lora_bold"
        android:textSize="@dimen/_13sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_login_forgot_password"/>

    <LinearLayout
        android:id="@+id/layout_login_sign_up_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora"
            android:text="@string/not_account"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/layout_login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_bold"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/_6sdp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
