<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_40sdp">

        <TextView
            android:id="@+id/layout_facilities_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_bold"
            android:text="@string/facilities"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorText3"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layout_facilities_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_12sdp"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/layout_facilities_label" />

        <TextView
            android:id="@+id/layout_facilities_room_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_bold"
            android:text="@string/room_facilities"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorText3"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/layout_facilities_rv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layout_facilities_room_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_12sdp"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/layout_facilities_room_label" />

        <TextView
            android:id="@+id/layout_facilities_kitchen_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_bold"
            android:text="@string/kitchen_facilities"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorText3"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/layout_facilities_room_rv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layout_facilities_kitchen_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/layout_facilities_kitchen_label" />

        <TextView
            android:id="@+id/layout_facilities_special_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_bold"
            android:text="@string/special_facilities"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorText3"        android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/layout_facilities_kitchen_rv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layout_facilities_special_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/layout_facilities_special_label" />

        <TextView
            android:id="@+id/layout_facilities_entertainment_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_bold"
            android:text="@string/entertainment"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorText3"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/layout_facilities_special_rv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layout_facilities_entertainment_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/layout_facilities_entertainment_label" />

        <TextView
            android:id="@+id/layout_facilities_families_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_bold"
            android:text="@string/families"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorText3"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/layout_facilities_entertainment_rv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layout_facilities_families_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/layout_facilities_families_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>