<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_100sdp">

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/layout_address_check_in_label"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_bold"
            android:text="@string/time_check_in"
            android:textSize="@dimen/_13sdp"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/layout_address_check_in_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layout_address_check_in_container" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_address_check_in_container"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/autocomplete_fragment">

            <EditText
                android:id="@+id/layout_address_check_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_transparent"
                android:fontFamily="@font/lora"
                android:inputType="number"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintTop_toBottomOf="@+id/layout_title_type_container" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/layout_address_check_out_label"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_bold"
            android:text="@string/time_check_out"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="@+id/layout_address_check_out_container"
            app:layout_constraintStart_toStartOf="@+id/layout_address_check_in_label"
            app:layout_constraintTop_toTopOf="@+id/layout_address_check_out_container" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_address_check_out_container"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/layout_address_check_in_container">

            <EditText
                android:id="@+id/layout_address_check_out"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_transparent"
                android:fontFamily="@font/lora"
                android:inputType="number"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintTop_toBottomOf="@+id/layout_title_type_container" />

        </androidx.cardview.widget.CardView>

        <com.aminography.primedatepicker.calendarview.PrimeCalendarView
            android:id="@+id/primeCalendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintTop_toBottomOf="@id/layout_address_check_out_container" />

        <TextView
            android:id="@+id/layout_address_pick_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/lora_bold"
            android:text="@string/pick_all_date"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primeCalendarView" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/layout_address_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:fontFamily="@font/lora_bold"
            android:text="@string/continue_btn"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/layout_address_pick_all"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>